--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,15 @@ table td {
     margin: 0 1px;
     overflow: hidden;
 }
+.items-fixed {
+    position: relative;
+    width: 36px;
+    height: 100%;
+    letter-spacing: -3px;
+    display: inline-block;
+    margin: 0 1px;
+    overflow: hidden;
+}
 .r-items{
     left:37px;
 }
@@ -355,6 +364,7 @@ table td {
     width: 60px;
     margin-top: 33px;
     margin-left: 2px;
+    cursor: pointer;
 }
 .fIcon img{
     height: 100%;
@@ -372,6 +382,7 @@ table td {
     height: 76px;
     margin-top: 38px;
     border-radius: 50%;
+    cursor: pointer;
     background: linear-gradient(to bottom,#178aff,#1a75d2);
     overflow: hidden;
 }
